# ai

./: .editorconfig  .gitignore  .gitmodules  ai.sln  cognitus - Shortcut.lnk  unity_ai.sln.DotSettings
Assets/: objects.json  packages.config
Assets/Scenes/: patterns.unity
Assets/objects/: Figure_appearance.prefab  Pattern_appearance.prefab  pattern_storage.prefab
Assets/output/: Figure_0.dot
Assets/savings/: initial_patterns.json
Assets/scripts/: scripts.asmdef
ProjectSettings/: ProjectSettings.asset
UserSettings/: EditorUserSettings.asset  Search.settings
UserSettings/Layouts/: default-2021.dwlt
console_ai/: app.config  console_ai.fsproj  console_ai.sln  main.fs  program_loop.fs
console_ai/fsharp_ai/: network.fs
cpp/basic_data_structures/: CMakeLists.txt  config.h.in
cpp/basic_data_structures/src/Figure/Appearance/: Appearance.cpp  Appearance.h
cpp/basic_data_structures/src/Figure/Edge/: Edge.cpp  Edge.h
cpp/basic_data_structures/src/Figure/Figure_appearance/: Figure_appearance.cpp  Figure_appearance.h
cpp/basic_data_structures/src/Figure/Subfigure/: Subfigure.cpp  Subfigure.h
cpp/basic_data_structures/src/Figure/overview/: Figure.cpp  Figure.h
cpp/basic_data_structures/src/Interval/: Interval.cpp  Interval.h
databases/mysql/: ai.mwb
databases/postgres/: ai.pgsql  ai.sql
databases/sqlite/: ai.db  ai.db-journal  ai_sqlite.odb  test.db  test.odb
docs/: .directory  ai_index.mm  current ENG.odt  current.odt  current.ora  overview.mm  spotting_figures.ora  template.odt  template.ora
docs/Algorithms/: .~lock.Algorithm_parts.odt#  Algorithm_parts.odt  Algorythm_parts.odt  algorithm_structure.odt  algorythm_parts2.psd  creation of algorithms (rus orig).odt  creation of algorithms.odt
docs/Concepts/: math concepts.fla
docs/stencils/: test.dot
dotTrace first slow finding sequences/: Unit Tests.tmp  Unit Tests.tmp.0001  Unit Tests.tmp.0002  Unit Tests.tmp.0003  Unit Tests.tmp.State
fsharp/: .gitignore  ai_core.fsproj  fsharp.fsproj  interactive.fs  references.fsx
modules/finding_sequences/: CMakeLists.txt  conanfile.txt  mathematical_primers.txt  mathematical_primers_long.c  mathematical_primers_long.txt  signals.txt
modules/finding_sequences/csharp_gpu/: Finding_sequences.cs  finding_sequences_csharp.csproj
modules/finding_sequences/finding_sequences_cpp_naive/: CMakeLists.txt
modules/finding_sequences/finding_sequences_cpp_naive/include/: finding_sequences_interface.h
modules/finding_sequences/finding_sequences_cpp_naive/test/boost_ut/: Finding_sequences_test.cpp
modules/finding_sequences/finding_sequences_csharp_gpu/src/: Finding_many_repetitions_csharp_gpu.cs  Finding_repetitions_csharp_gpu.cs  Finding_sequences_csharp_gpu.cs
modules/finding_sequences/finding_sequences_fsharp_gpu/: finding_sequences_fsharp_gpu.fsproj
modules/finding_sequences/finding_sequences_fsharp_gpu/src/finding_many_repetitions/: finding_many_repetitions.fs
modules/finding_sequences/finding_sequences_fsharp_gpu/src/finding_repetitions/: finding_repetitions.fs
modules/finding_sequences/finding_sequences_fsharp_simple/: finding_sequences_fsharp_simple.fsproj
modules/finding_sequences/finding_sequences_fsharp_simple/src/: finding_repetitions_with_concepts.fs
modules/finding_sequences/finding_sequences_fsharp_simple/src/finding_many_repetitions/: finding_many_repetitions.fs  finding_many_repetitions_across_intervals.fs  finding_many_repetitions_no_dictionary.fs  finding_many_repetitions_simple.fs  finding_repetitions_across_intervals.fs
modules/finding_sequences/finding_sequences_fsharp_simple/src/finding_repetitions/: finding_repetitions.fs  finding_repetitions_across_intervals.fs
modules/finding_sequences/finding_sequences_fsharp_simple/src/finding_repetitions.fs/: finding_repetitions.fs
modules/finding_sequences/finding_sequences_interface/: finding_sequences.fsproj
modules/finding_sequences/finding_sequences_interface/src/: finding_many_repetitions.fs  finding_repeatitions.fs  finding_repetitions.fs
modules/finding_sequences/finding_sequences_interface/src/test/: benchmark.fs  benchmark_all_repetitions.fs  finding_many_repetitions.fs  finding_repetitions.fs  finding_sequences_with_concepts.fs  images_of_finding_sequences.fs  testing_all_repetitions.fs  testing_many_repetitions.fs  testing_repeated_pair.fs  testing_repetitions_across_intervals.fs
modules/finding_sequences/finding_sequences_interface/src/test/benchmarks/: ingenious_benchmark.fs  repetitive_benchmark.fs
modules/finding_sequences/fsharp_simple/src/: finding_repetitions_with_concepts.fs
modules/finding_sequences/fsharp_simple/src/finding_many_repetitions/: interface.fs  simple_impl.fs  tests.fs
modules/finding_sequences/fsharp_simple/src/finding_repeated_pairs/: gpu_impl.fs  interface.fs  simple_impl.fs
modules/finding_sequences/fsharp_simple/src/test/: finding_a_sequence.fs  finding_sequences_in_history.fs
modules/finding_sequences/include/: finding_sequences.h  finding_sequences_interface.h
modules/finding_sequences/src/: CMakeLists.txt  finding_sequences.cpp  finding_sequences_test.cpp  preprocessor_directives.h
modules/finding_sequences/src/Computational_resource/: Computational_resource.h
modules/finding_sequences/src/Database/: Database.cpp  Database.h
modules/finding_sequences/src/Finding_sequences/: Finding_sequences.cpp  TEST_CASE(the same sequences).ora  iteration_of_finding_a_repeated_pair-find_previous_headfigure.ora.ora
modules/finding_sequences/src/Finding_sequences/Interval_in_sequence/: Interval_in_sequence.cpp
modules/finding_sequences/src/Finding_sequences/Iteration_state_of_searching_pairs/: Iteration_state_of_searching_pairs.cpp  Iteration_state_of_searching_pairs.h
modules/finding_sequences/src/Finding_sequences/test/boost_ut/: Finding_sequences_test.cpp
modules/finding_sequences/src/Finding_sequences/test/catch2/: Finding_sequences_test.cpp
modules/finding_sequences/src/Main/: finding_sequences_interface.cpp
modules/finding_sequences/test/: CMakeLists.txt
modules/finding_sequences/test/catch2/: finding_sequences.cpp
(+942 files in other folders)
